Всё без сборки вебпаком

--- a/views/index.pug
+++ b/views/index.pug
@@ -104,5 +104,8 @@ block content
                             span :
                             span#picture_seconds 00
 
+                    #progressbar.progressbar.w3-center(data-value='50')
+
+
 block js
     script(src='/javascripts/index.js')
