--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
       title Аукцион картин
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='/stylesheets/w3.css')
-    //link(rel='stylesheet', href='/stylesheets/jquery-ui.css')
+    link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='http://localhost:3030/socket.io/socket.io.js')
     script(src='/javascripts/jquery-3.3.1.min.js')
